--- a/src/old4App.css
+++ b/src/old4App.css
@@ -15,6 +15,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  margin-top: 70px; 
 }
 
 .sidebar-item {
@@ -38,16 +39,17 @@
 
 .grid-container {
   display: grid;
-  grid-template-columns: repeat(6, 1fr); 
+  grid-template-columns: repeat(7, 1fr); 
   width: 100%; 
   align-items: center;
-  grid-gap: 10px;
 }
 
 .grid-header, .grid-cell {
   padding: 0.5rem;
   text-align: center;
-  border: 1px solid #ccc;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .grid-header {
@@ -71,24 +73,4 @@
   color: white;
   border: none;
   cursor: pointer;
-}
-
-@media (max-width: 768px) {
-  .App {
-    flex-direction: column;
-  }
-  
-  .sidebar {
-    width: 100%;
-    order: 2; 
-  }
-
-  .main-content {
-    width: 100%;
-    order: 1;
-  }
-
-  .grid-container {
-    grid-template-columns: repeat(3, 1fr);
-  }
 }
